# htmligator

./: .gitignore  Makefile  README.md  pyproject.toml  release.env  sonar-project.properties  tox.ini
.github/workflows/: build.yaml
tests/expected-output/: cli-version.txt
